# infokiosk

./: .gitignore  README.md  build-windows-LEGACY-FIXED.yml  cd infokiosk-tauri.txt  check.txt  diffconf.txt  diffstat.txt  diffsync.txt  manifest.json  settings.example.json
.github/workflows/: build-windows.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/kiosk_sync/: Cargo.toml
src-tauri/kiosk_sync/src/: diff.rs  error.rs  lib.rs  manifest.rs  sync.rs
src-tauri/kiosk_sync/tests/: realistic_sync.rs
src-tauri/src/: main.rs  settings.rs  slides.rs  sync_loop.rs
tools/kiosk-publisher-cli/: Cargo.toml
tools/kiosk-publisher-cli/src/: main.rs
