[package]
name = "infokiosk"
version = "1.0.0"
description = "Инфокиоск ИрсКом / Baham — проверка цен + локальная синхронизация контента"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }

# наш проверенный движок синхронизации (см. kiosk_sync/ — 13 тестов,
# включая эмуляцию сети/повреждённой докачки/атомарной подмены)
kiosk_sync = { path = "kiosk_sync" }

[features]
# custom-protocol нужен для релизной сборки (см. build.rs / tauri-build)
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"   # оптимизация под размер — важно на слабых мини-ПК с eMMC
strip = true
