[package]
name = "infokiosk"
version = "1.0.3"
description = "Инфокиоск ИрсКом / Baham — проверка цен + локальная синхронизация контента"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
ureq = { version = "2", default-features = false }

# Явно закреплено ниже последней версии: свежие выпуски "time" (0.3.42+)
# требуют более новый Cargo/Rust, чем 1.77.2 (см. rust-toolchain.toml —
# закреплено ради поддержки Windows 7/8/8.1 на киосках), иначе сборка
# падает с ошибкой "feature `edition2024` is required". "time" тянется
# транзитивно через tauri (пакет cookie), сами мы её не используем.
time = "=0.3.41"

# наш проверенный движок синхронизации (см. kiosk_sync/ — 13 тестов,
# включая эмуляцию сети/повреждённой докачки/атомарной подмены)
kiosk_sync = { path = "kiosk_sync" }

[features]
# custom-protocol нужен для релизной сборки (см. build.rs / tauri-build)
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"   # оптимизация под размер — важно на слабых мини-ПК с eMMC
strip = true
